manifests/dev/trust-manager/Service-trust-manager-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trust-manager
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/name: trust-manager
  name: trust-manager-metrics
  namespace: cert-manager
spec:
  ports:
    - name: metrics
      port: 9402
      protocol: TCP
      targetPort: 9402
  selector:
    app: trust-manager
  type: ClusterIP
