manifests/dev/trust-manager/Service-trust-manager.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trust-manager
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/name: trust-manager
  name: trust-manager
  namespace: cert-manager
spec:
  ports:
    - name: webhook
      port: 443
      protocol: TCP
      targetPort: 6443
  selector:
    app: trust-manager
  type: ClusterIP
