manifests/dev/trust-manager/ValidatingWebhookConfiguration-trust-manager.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from-secret: cert-manager/trust-manager-tls
  labels:
    app: trust-manager
    app.kubernetes.io/instance: trust-manager
    app.kubernetes.io/name: trust-manager
  name: trust-manager
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: trust-manager
        namespace: cert-manager
        path: /validate-trust-cert-manager-io-v1alpha1-bundle
    failurePolicy: Fail
    name: trust.cert-manager.io
    rules:
      - apiGroups:
          - trust.cert-manager.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - bundles
    sideEffects: None
    timeoutSeconds: 5
